native/cbl-dart/src/Fleece+Dart.h

// Slice -------------------------------------------------------------------

/**
 * See `FLSlice` in Dart code.
 */
struct CBLDart_FLSlice {
  const void *buf;
  uint64_t size;
};
typedef CBLDart_FLSlice CBLDart_FLString;
typedef CBLDart_FLSliceResult CBLDart_FLStringResult;
// Dict --------------------------------------------------------------------

CBLDART_EXPORT
FLValue CBLDart_FLDict_Get(FLDict dict, CBLDart_FLString keyString);
typedef struct {
  FLDictIterator *iterator;
  CBLDart_FLSlice keyString;
  uint8_t done;
} CBLDart_DictIterator;
CBLDART_EXPORT
CBLDart_DictIterator *CBLDart_FLDictIterator_Begin(Dart_Handle object,
                                                   FLDict dict);
CBLDART_EXPORT
void CBLDart_FLDictIterator_Next(CBLDart_DictIterator *iterator);
CBLDART_EXPORT
void CBLDart_FLMutableDict_Remove(FLMutableDict dict, CBLDart_FLString key);
CBLDART_EXPORT
FLSlot CBLDart_FLMutableDict_Set(FLMutableDict dict, CBLDart_FLString key);
CBLDART_EXPORT
FLMutableArray CBLDart_FLMutableDict_GetMutableArray(FLMutableDict dict,
                                                     CBLDart_FLString key);
CBLDART_EXPORT
FLMutableDict CBLDart_FLMutableDict_GetMutableDict(FLMutableDict dict,
                                                   CBLDart_FLString key);
// Decoder --------------------------------------------------------------------

struct CBLDart_LoadedFLValue {
  int8_t type;
  uint8_t isInteger;
  uint32_t collectionSize;
  uint8_t asBool;
  int64_t asInt;
  double asDouble;
  CBLDart_FLString asString;
  CBLDart_FLSlice asData;
  FLValue asValue;
};
CBLDART_EXPORT
CBLDart_FLStringResult CBLDart_FLData_Dump(CBLDart_FLSlice data);
CBLDART_EXPORT
uint8_t CBLDart_FLValue_FromData(CBLDart_FLSlice data, FLTrust trust,
                                 CBLDart_LoadedFLValue *out);
CBLDART_EXPORT
void CBLDart_GetLoadedFLValue(FLValue value, CBLDart_LoadedFLValue *out);
CBLDART_EXPORT
void CBLDart_FLArray_GetLoadedFLValue(FLArray array, uint32_t index,
                                      CBLDart_LoadedFLValue *out);
CBLDART_EXPORT
void CBLDart_FLDict_GetLoadedFLValue(FLDict dict, CBLDart_FLString key,
                                     CBLDart_LoadedFLValue *out);
struct CBLDart_FLDictIterator2 {
  uint8_t isDone;
  CBLDart_FLString *keyOut;
  CBLDart_LoadedFLValue *valueOut;
  FLDictIterator *_iterator;
};