packages/cbl_ffi/lib/src/fleece.dart


  late final FLArray_MutableCopy _mutableCopy;
  late final FLMutableArray_New _new;
  late final FLMutableArray_GetSource _getSource;
  late final FLMutableArray_IsChanged _isChanged;
  late final FLMutableArray_Set _set;
  late final FLMutableArray_Append _append;
  late final FLMutableArray_Insert _insert;
  late final FLMutableArray_Remove _remove;
  late final FLMutableArray_Resize _resize;
  late final FLMutableArray_GetMutableArray _getMutableArray;
  late final FLMutableArray_GetMutableDict _getMutableDict;

  Pointer<FLMutableArray> mutableCopy(
    Pointer<FLArray> array,
    Set<FLCopyFlag> flags,
  ) {
    return _mutableCopy(array, flags.toCFlags());
  }

  Pointer<FLMutableArray> create() {
    return _new();
  }

  Pointer<FLArray> getSource(Pointer<FLMutableArray> array) {
    return _getSource(array);
  }

  bool isChanged(Pointer<FLMutableArray> array) {
    return _isChanged(array).toBool();
  }

  Pointer<FLSlot> set(Pointer<FLMutableArray> array, int index) {
    return _set(array, index);
  }

  Pointer<FLSlot> append(Pointer<FLMutableArray> array) {
    return _append(array);
  }

  void insert(Pointer<FLMutableArray> array, int index, int count) {
    return _insert(array, index, count);
  }

  void remove(Pointer<FLMutableArray> array, int firstIndex, int count) {
    return _remove(array, firstIndex, count);
  }

  void resize(Pointer<FLMutableArray> array, int size) {
    return _resize(array, size);
  }

  Pointer<FLMutableArray>? getMutableArray(
    Pointer<FLMutableArray> array,
    int index,
  ) {
    return _getMutableArray(array, index).toNullable();
  }

  Pointer<FLMutableDict>? getMutableDict(
    Pointer<FLMutableArray> array,
    int index,
  ) {
    return _getMutableDict(array, index).toNullable();
  }
}

// === Dict ====================================================================

class FLDict extends Opaque {}

typedef FLDict_Count_C = Uint32 Function(Pointer<FLDict> dict);
typedef FLDict_Count = int Function(Pointer<FLDict> dict);

typedef FLDict_IsEmpty_C = Uint8 Function(Pointer<FLDict> dict);
typedef FLDict_IsEmpty = int Function(Pointer<FLDict> dict);

typedef FLDict_AsMutable = Pointer<FLMutableDict> Function(
  Pointer<FLDict> dict,
);

typedef FLDict_Get = Pointer<FLValue> Function(
  Pointer<FLDict> dict,
  FLString key,
);

class DictBindings extends Bindings {
  DictBindings(Bindings parent) : super(parent) {
    _get = libs.cblDart
        .lookupFunction<FLDict_Get, FLDict_Get>('CBLDart_FLDict_Get');
    _count =
        libs.cbl.lookupFunction<FLDict_Count_C, FLDict_Count>('FLDict_Count');
    _isEmpty = libs.cbl.lookupFunction<FLDict_IsEmpty_C, FLDict_IsEmpty>(
      'FLDict_IsEmpty',
    );
    _asMutable = libs.cbl.lookupFunction<FLDict_AsMutable, FLDict_AsMutable>(
      'FLDict_AsMutable',
    );
  }

  late final FLDict_Get _get;
  late final FLDict_Count _count;
  late final FLDict_IsEmpty _isEmpty;
  late final FLDict_AsMutable _asMutable;

  Pointer<FLValue> get(Pointer<FLDict> dict, String key) {
    return stringTable
        .autoFree(() => _get(dict, stringTable.flString(key).ref));
  }

  int count(Pointer<FLDict> dict) {
    return _count(dict);
  }

  bool isEmpty(Pointer<FLDict> dict) {
    return _isEmpty(dict).toBool();
  }

  Pointer<FLMutableDict>? asMutable(Pointer<FLDict> dict) {
    return _asMutable(dict).toNullable();
  }
}

class DictIterator extends Struct {
  // ignore: unused_element
  external Pointer<Void> get _iterator;
  external FLString get _keyString;
  @Uint8()
  external int get _done;
}

extension DictIteratorExt on DictIterator {
  String? get keyString => _keyString.toDartString();
  bool get done => _done.toBool();
}

typedef CBLDart_FLDictIterator_Begin_C = Pointer<DictIterator> Function(
  Handle object,
  Pointer<FLDict> dict,
);
typedef CBLDart_FLDictIterator_Begin = Pointer<DictIterator> Function(
  Object object,
  Pointer<FLDict> dict,
);

typedef CBLDart_FLDictIterator_Next_C = Void Function(
  Pointer<DictIterator> iterator,
);
typedef CBLDart_FLDictIterator_Next = void Function(
  Pointer<DictIterator> iterator,
);

class DictIteratorBindings extends Bindings {
  DictIteratorBindings(Bindings parent) : super(parent) {
    _begin = libs.cblDart.lookupFunction<CBLDart_FLDictIterator_Begin_C,
        CBLDart_FLDictIterator_Begin>(
      'CBLDart_FLDictIterator_Begin',
    );
    _next = libs.cblDart.lookupFunction<CBLDart_FLDictIterator_Next_C,
        CBLDart_FLDictIterator_Next>(
      'CBLDart_FLDictIterator_Next',
    );
  }

  late final CBLDart_FLDictIterator_Begin _begin;
  late final CBLDart_FLDictIterator_Next _next;

  Pointer<DictIterator> begin(Object object, Pointer<FLDict> dict) {
    return _begin(object, dict);
  }

  void next(Pointer<DictIterator> iterator) {
    _next(iterator);
  }
}

// === MutableDict =============================================================

class FLMutableDict extends Opaque {}

typedef FLDict_MutableCopy_C = Pointer<FLMutableDict> Function(
  Pointer<FLDict> source,
  Uint32 flags,
);
typedef FLDict_MutableCopy = Pointer<FLMutableDict> Function(
  Pointer<FLDict> source,
  int flags,
);

typedef FLMutableDict_New = Pointer<FLMutableDict> Function();

typedef FLMutableDict_GetSource = Pointer<FLDict> Function(
  Pointer<FLMutableDict> dict,
);

typedef FLMutableDict_IsChanged_C = Uint8 Function(Pointer<FLMutableDict> dict);
typedef FLMutableDict_IsChanged = int Function(Pointer<FLMutableDict> dict);

typedef CBLDart_FLMutableDict_Set = Pointer<FLSlot> Function(
  Pointer<FLMutableDict> dict,
  FLString key,
);

typedef CBLDart_FLMutableDict_Remove_C = Void Function(
  Pointer<FLMutableDict> dict,
  FLString key,
);
typedef CBLDart_FLMutableDict_Remove = void Function(
  Pointer<FLMutableDict> dict,
  FLString key,
);

typedef FLMutableDict_RemoveAll_C = Void Function(Pointer<FLMutableDict> dict);
typedef FLMutableDict_RemoveAll = void Function(Pointer<FLMutableDict> dict);

typedef CBLDart_FLMutableDict_GetMutableArray = Pointer<FLMutableArray>
    Function(
  Pointer<FLMutableDict> dict,
  FLString key,
);

typedef CBLDart_FLMutableDict_GetMutableDict = Pointer<FLMutableDict> Function(
  Pointer<FLMutableDict> dict,
  FLString key,
);

class MutableDictBindings extends Bindings {
  MutableDictBindings(Bindings parent) : super(parent) {
    _mutableCopy =
        libs.cbl.lookupFunction<FLDict_MutableCopy_C, FLDict_MutableCopy>(
      'FLDict_MutableCopy',
    );
    _new = libs.cbl.lookupFunction<FLMutableDict_New, FLMutableDict_New>(
      'FLMutableDict_New',
    );
    _getSource = libs.cbl
        .lookupFunction<FLMutableDict_GetSource, FLMutableDict_GetSource>(
      'FLMutableDict_GetSource',
    );
    _isChanged = libs.cbl
        .lookupFunction<FLMutableDict_IsChanged_C, FLMutableDict_IsChanged>(
      'FLMutableDict_IsChanged',
    );
    _set = libs.cblDart
        .lookupFunction<CBLDart_FLMutableDict_Set, CBLDart_FLMutableDict_Set>(
      'CBLDart_FLMutableDict_Set',
    );
    _remove = libs.cblDart.lookupFunction<CBLDart_FLMutableDict_Remove_C,
        CBLDart_FLMutableDict_Remove>(
      'CBLDart_FLMutableDict_Remove',
    );
    _removeAll = libs.cbl
        .lookupFunction<FLMutableDict_RemoveAll_C, FLMutableDict_RemoveAll>(
      'FLMutableDict_RemoveAll',
    );
    _getMutableArray = libs.cblDart.lookupFunction<
        CBLDart_FLMutableDict_GetMutableArray,
        CBLDart_FLMutableDict_GetMutableArray>(
      'CBLDart_FLMutableDict_GetMutableArray',
    );
    _getMutableDict = libs.cblDart.lookupFunction<
        CBLDart_FLMutableDict_GetMutableDict,
        CBLDart_FLMutableDict_GetMutableDict>(
      'CBLDart_FLMutableDict_GetMutableDict',
    );
  }

  late final FLDict_MutableCopy _mutableCopy;
  late final FLMutableDict_New _new;
  late final FLMutableDict_GetSource _getSource;
  late final FLMutableDict_IsChanged _isChanged;
  late final CBLDart_FLMutableDict_Set _set;
  late final CBLDart_FLMutableDict_Remove _remove;
  late final FLMutableDict_RemoveAll _removeAll;
  late final CBLDart_FLMutableDict_GetMutableArray _getMutableArray;
  late final CBLDart_FLMutableDict_GetMutableDict _getMutableDict;

  Pointer<FLMutableDict> mutableCopy(
    Pointer<FLDict> source,
    Set<FLCopyFlag> flags,
  ) {
    return _mutableCopy(source, flags.toCFlags());
  }

  Pointer<FLMutableDict> create() {
    return _new();
  }

  Pointer<FLDict> getSource(Pointer<FLMutableDict> dict) {
    return _getSource(dict);
  }

  bool isChanged(Pointer<FLMutableDict> dict) {
    return _isChanged(dict).toBool();
  }

  Pointer<FLSlot> set(Pointer<FLMutableDict> dict, String key) {
    return stringTable
        .autoFree(() => _set(dict, stringTable.flString(key).ref));
  }

  void remove(Pointer<FLMutableDict> dict, String key) {
    stringTable.autoFree(() => _remove(dict, stringTable.flString(key).ref));
  }

  void removeAll(Pointer<FLMutableDict> dict) {
    _removeAll(dict);
  }

  Pointer<FLMutableArray>? getMutableArray(
    Pointer<FLMutableDict> array,
    String key,
  ) {
    return stringTable.autoFree(() {
      return _getMutableArray(array, stringTable.flString(key).ref)
          .toNullable();
    });
  }

  Pointer<FLMutableDict>? getMutableDict(
    Pointer<FLMutableDict> array,
    String key,
  ) {
    return stringTable.autoFree(() {
      return _getMutableDict(array, stringTable.flString(key).ref).toNullable();
    });
  }
}

// === Decoder =================================================================

enum FLTrust {
  untrusted,
  trusted,
}

extension on FLTrust {
  int toInt() => index;
}

class CBLDart_LoadedFLValue extends Struct {
  @Int8()
  external int _type;
  @Uint8()
  external int _isInteger;
  @Uint32()
  external int collectionSize;
  @Uint8()
  external int _asBool;
  @Int64()
  external int asInt;
  @Double()
  external double asDouble;
  external FLString asString;
  external FLSlice asData;
  external Pointer<FLValue> asValue;
}

// ignore: camel_case_extensions
extension CBLDart_LoadedFLValueExt on CBLDart_LoadedFLValue {
  FLValueType get type => _type.toFLValueType();
  bool get isInteger => _isInteger.toBool();
  bool get asBool => _asBool.toBool();
}

late final Pointer<CBLDart_LoadedFLValue> globalLoadedFLValue =
    CBLBindings.instance.fleece.decoder._globalLoadedFLValue;

typedef CBLDart_FLData_Dump_C = FLStringResult Function(FLSlice slice);
typedef CBLDart_FLData_Dump = FLStringResult Function(FLSlice slice);

typedef CBLDart_FLData_ConvertJSON_C = FLSliceResult Function(
  FLSlice json,
  Pointer<Uint32> errorOut,
);
typedef CBLDart_FLData_ConvertJSON = FLSliceResult Function(
  FLSlice json,
  Pointer<Uint32> errorOut,
);

typedef CBLDart_FLValue_FromData_C = Uint8 Function(
  FLSlice data,
  Uint8 trust,
  Pointer<CBLDart_LoadedFLValue> out,
);
typedef CBLDart_FLValue_FromData = int Function(
  FLSlice data,
  int trust,
  Pointer<CBLDart_LoadedFLValue> out,
);

typedef CBLDart_GetLoadedFLValue_C = Void Function(
  Pointer<FLValue> value,
  Pointer<CBLDart_LoadedFLValue> out,
);
typedef CBLDart_GetLoadedFLValue = void Function(
  Pointer<FLValue> value,
  Pointer<CBLDart_LoadedFLValue> out,
);

typedef CBLDart_FLArray_GetLoadedFLValue_C = Void Function(
  Pointer<FLArray> array,
  Uint32 index,
  Pointer<CBLDart_LoadedFLValue> out,
);
typedef CBLDart_FLArray_GetLoadedFLValue = void Function(
  Pointer<FLArray> array,
  int index,
  Pointer<CBLDart_LoadedFLValue> out,
);

typedef CBLDart_FLDict_GetLoadedFLValue_C = Void Function(
  Pointer<FLDict> dict,
  FLString key,
  Pointer<CBLDart_LoadedFLValue> out,
);
typedef CBLDart_FLDict_GetLoadedFLValue = void Function(
  Pointer<FLDict> dict,
  FLString key,
  Pointer<CBLDart_LoadedFLValue> out,
);

class CBLDart_FLDictIterator2 extends Struct {
  @Uint8()
  external int _isDone;
  // ignore: unused_field
  external Pointer<FLString> _keyOut;
  // ignore: unused_field
  external Pointer<CBLDart_LoadedFLValue> _valueOut;
  // ignore: unused_field
  external Pointer<Void> _iterator;
}
